[package]
name = "cxc"
version = "0.1.0"
edition = "2021"

[dependencies]
garde = "0.16.2"
thiserror = "1.0.50"
futures-util = "0.3.29"
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
hex = "0.4.3"
ring = "0.17.5"
serde_json = "1.0"
serde = { version = "1.0.190", features = ["derive"] }

[dev-dependencies]
rstest = "0.18.2"
